--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1gobarber",
+  "name": "gobarber",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -12,6 +12,15 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
   }
