--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "date-fns": "^2.14.0",
+    "express": "^4.17.1",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^6.8.0",
