--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "start": "ts-node src/index.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
