--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "prettier"
     ],
     "rules": {
+        "camelcase": "off",
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
         "import/extensions": [
