--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "docker",
+  "password": "secret",
   "database": "gostack_gobarber",
   "entities": [
     "./src/models/*.ts"
