--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
     "typeorm": "^0.2.45",
     "uuid": "^9.0.0"
   },
